--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -91,7 +91,7 @@ video {
     -moz-box-sizing: border-box;
 
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: transparent;
 }
 
 input {
